# Synapse-Plugins

./: .gitignore  README.md  conftest.py  package_plugin.py  plugins.json  roi_nodes.py
data_processing/: __init__.py  data_nodes.py  dataframe_nodes.py  script_node.py
figure_plotting/: __init__.py  plot_nodes.py  svg_editor_node.py
filopodia_nodes/: __init__.py  cell_iteration_nodes.py  filopodia_nodes.py
image_analysis/: __init__.py  cell_mask_editor.py  image_process_nodes.py  mask_nodes.py  roi_nodes.py  vision_nodes.py
imaris_3d_nodes/: README.md  __init__.py  _segment_3d_rs_v2.py  _widgets.py  apply_to_groups_node.py  blank_core.py  blank_normalize_node.py  cell_qc_node.py  cell_qc_widget.py  control_screening_node.py  data.py  io.py  kfold_picker_node.py  kfold_picker_widget.py  load_dataset_node.py  screen_core.py  segmentation_core.py
rdkit_nodes/: __init__.py  (+15 more)
rdkit_nodes/rust/sdfrust/: .gitignore  BENCHMARK_RESULTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
rdkit_nodes/rust/sdfrust/.github/: dependabot.yml
rdkit_nodes/rust/sdfrust/.github/workflows/: python.yml  rust.yml
rdkit_nodes/rust/sdfrust/benches/: mol2_parse_benchmark.rs  roundtrip_benchmark.rs  sdf_parse_benchmark.rs
rdkit_nodes/rust/sdfrust/benches/comparison/: benchmark_pure_python.py  benchmark_rdkit.py  generate_report.py  requirements.txt  run_all.sh
rdkit_nodes/rust/sdfrust/benches/data/: README.md  generate_synthetic.py
rdkit_nodes/rust/sdfrust/examples/: basic_usage.rs  benchmark.rs  ml_features.rs  parse_molecules.rs
rdkit_nodes/rust/sdfrust/sdfrust-python/: .gitignore  Cargo.toml  README.md  pyproject.toml
rdkit_nodes/rust/sdfrust/sdfrust-python/examples/: README.md  basic_usage.py  batch_analysis.py  format_conversion.py  geometry_analysis.py  ml_features.py
rdkit_nodes/rust/sdfrust/sdfrust-python/examples/data/: cholesterol.sdf  dopamine.sdf  drug_library.sdf  ibuprofen.sdf
rdkit_nodes/rust/sdfrust/sdfrust-python/python/sdfrust/: __init__.py
rdkit_nodes/rust/sdfrust/sdfrust-python/src/: atom.rs  bond.rs  error.rs  iterators.rs  lib.rs  molecule.rs  parsing.rs  similarity.rs  writing.rs
rdkit_nodes/rust/sdfrust/sdfrust-python/tests/: test_basic.py  test_geometry.py  test_gzip.py  test_ml_validation.py
rdkit_nodes/rust/sdfrust/src/: atom.rs  bond.rs  collection.rs  error.rs  graph.rs  lib.rs  molecule.rs  sgroup.rs  stereogroup.rs
rdkit_nodes/rust/sdfrust/src/descriptors/: aromaticity.rs  bond_inference.rs  chirality.rs  conjugation.rs  elements.rs  gasteiger.rs  hybridization.rs  mod.rs  molecular.rs  rings.rs  topological.rs  valence.rs
rdkit_nodes/rust/sdfrust/src/featurize/: mod.rs  ogb.rs
rdkit_nodes/rust/sdfrust/src/fingerprints/: ecfp.rs  mod.rs
rdkit_nodes/rust/sdfrust/src/geometry/: angles.rs  distance.rs  mod.rs  neighbor_list.rs  rmsd.rs  transform.rs
rdkit_nodes/rust/sdfrust/src/parser/: compression.rs  mod.rs  mol2.rs  sdf.rs  sdf_v3000.rs  xyz.rs
rdkit_nodes/rust/sdfrust/src/writer/: mod.rs  mol2.rs  pdbqt.rs  sdf.rs  sdf_v3000.rs
rdkit_nodes/rust/sdfrust/tests/: bond_inference_tests.rs  descriptor_tests.rs  edge_case_tests.rs  geometry_tests.rs  gzip_tests.rs  mol2_tests.rs  pdbbind_benchmark.rs  pubchem_tests.rs  sdf_parsing_tests.rs  v3000_tests.rs  xyz_tests.rs
rdkit_nodes/rust/sdfrust/tests/test_data/: acetaminophen.sdf  aspirin.sdf  benzene.mol2  caffeine_pubchem.sdf  galactose.sdf  glucose.sdf  methane.mol2  methionine.sdf  multi.xyz  v3000_benzene.sdf  v3000_charged.sdf  v3000_methane.sdf  v3000_stereo.sdf  water.xyz
rdkit_nodes/rust/vina_rust/: Cargo.toml  pyproject.toml
rdkit_nodes/rust/vina_rust/src/: atom.rs  bfgs.rs  cache.rs  common.rs  conf.rs  grid.rs  lib.rs  model.rs  monte_carlo.rs  parallel.rs  parse_pdbqt.rs  parse_sdf.rs  precalculate.rs  python.rs  rxdock_atom.rs  rxdock_cavity.rs  rxdock_chrom.rs  rxdock_dihedral.rs  rxdock_ga.rs  rxdock_sa.rs  rxdock_scoring.rs  rxdock_search.rs  rxdock_simplex.rs  scoring.rs  tree.rs  visited.rs
(+70 files in other folders)
