[package]
name = "vina_rust"
version = "0.1.0"
edition = "2021"
description = "AutoDock Vina reimplemented in Rust with Python bindings"

[lib]
name = "vina_rust"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
sdfrust = { path = "../sdfrust" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

[profile.dev]
opt-level = 2
