[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "sdfrust"
version = "0.6.0"
description = "Fast Rust-based SDF, MOL2, and XYZ molecular structure file parser"
authors = [
    {name = "Hosein Fooladi", email = "hosein@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["chemistry", "sdf", "mol2", "xyz", "cheminformatics", "parsing", "molecules"]

[project.optional-dependencies]
numpy = ["numpy>=1.20"]
dev = ["pytest>=7.0", "numpy>=1.20"]

[project.urls]
Homepage = "https://github.com/hfooladi/sdfrust"
Repository = "https://github.com/hfooladi/sdfrust"
Documentation = "https://github.com/hfooladi/sdfrust#readme"

[tool.maturin]
features = ["pyo3/extension-module", "numpy", "gzip"]
python-source = "python"
module-name = "sdfrust._sdfrust"
